--- a/index.html
+++ b/index.html
@@ -182,140 +182,54 @@
         </div>
       </div>
 
-      <section class="ndx-gal" aria-labelledby="ndx-gal-title">
-        <h2 id="ndx-gal-title" class="ndx-gal-title">Thư viện ảnh</h2>
-
-        <div class="ndx-gal-viewport">
-          <div class="ndx-gal-rail">
-            <!-- Khai báo thẳng 1..20 (ảnh lỗi sẽ tự remove) -->
-            <figure class="ndx-gal-item"><img src="assets/gallery/1.png"
-                alt="Ảnh 1"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/2.png"
-                alt="Ảnh 2"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/3.png"
-                alt="Ảnh 3"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/4.png"
-                alt="Ảnh 4"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/5.png"
-                alt="Ảnh 5"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/6.png"
-                alt="Ảnh 6"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/7.png"
-                alt="Ảnh 7"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/8.png"
-                alt="Ảnh 8"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/9.png"
-                alt="Ảnh 9"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/10.png"
-                alt="Ảnh 10"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/11.png"
-                alt="Ảnh 11"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/12.png"
-                alt="Ảnh 12"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/13.png"
-                alt="Ảnh 13"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/14.png"
-                alt="Ảnh 14"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/15.png"
-                alt="Ảnh 15"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/16.png"
-                alt="Ảnh 16"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/17.png"
-                alt="Ảnh 17"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/18.png"
-                alt="Ảnh 18"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/19.png"
-                alt="Ảnh 19"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/20.png"
-                alt="Ảnh 20"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/21.png"
-                alt="Ảnh 21"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/22.png"
-                alt="Ảnh 22"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/23.png"
-                alt="Ảnh 23"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/24.png"
-                alt="Ảnh 24"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/25.png"
-                alt="Ảnh 25"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/26.png"
-                alt="Ảnh 26"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/27.png"
-                alt="Ảnh 27"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/28.png"
-                alt="Ảnh 28"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/29.png"
-                alt="Ảnh 29"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/30.png"
-                alt="Ảnh 30"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/31.png"
-                alt="Ảnh 31"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/32.png"
-                alt="Ảnh 32"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/33.png"
-                alt="Ảnh 33"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/34.png"
-                alt="Ảnh 34"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/35.png"
-                alt="Ảnh 35"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/36.png"
-                alt="Ảnh 36"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/37.png"
-                alt="Ảnh 37"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/38.png"
-                alt="Ảnh 38"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/39.png"
-                alt="Ảnh 39"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/40.png"
-                alt="Ảnh 40"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/41.png"
-                alt="Ảnh 41"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-            <figure class="ndx-gal-item"><img src="assets/gallery/42.png"
-                alt="Ảnh 42"
-                onerror="this.closest('.ndx-gal-item')?.remove()"></figure>
-          </div>
+      <section class="hero">
+        <!-- NÚT đi đến trang bộ sưu tập ảnh -->
+        <div class="hero__quick"
+          style="display:flex;justify-content:center;margin-top:16px;">
+          <a class="quick"
+            href="gallery.html"
+            rel="nofollow"
+            style="
+       display:inline-flex;
+       align-items:center;
+       justify-content:center;
+       gap:8px;
+       text-decoration:none;
+       color:#fff;
+       background:linear-gradient(90deg,#0ea5e9,#0284c7);
+       font-weight:600;
+       font-size:15px;
+       border-radius:12px;
+       padding:12px 24px;
+       width:100%;
+       max-width:320px;
+       border:1px solid rgba(255,255,255,0.15);
+       transition:background 0.25s ease,transform 0.15s ease;
+     "
+            onmouseover="this.style.background='linear-gradient(90deg,#38bdf8,#0ea5e9)';this.style.transform='translateY(-1px)'"
+            onmouseout="this.style.background='linear-gradient(90deg,#0ea5e9,#0284c7)';this.style.transform='none'">
+            <svg class="quick__icon" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="1.8" stroke-linecap="round"
+              stroke-linejoin="round" aria-hidden="true"
+              style="width:20px;height:20px;stroke:currentColor;">
+              <rect x="3" y="3" width="18" height="18" rx="4"></rect>
+              <path d="M8 14l3-3 2 2 3-3"></path>
+            </svg>
+            <span>Xem bộ sưu tập ảnh</span>
+          </a>
         </div>
+
+        <picture>
+          <source type="image/avif" srcset="assets/gallery/1.png">
+          <img
+            src="assets/gallery/1.png"
+            alt="Sự kiện nổi bật"
+            width="1280" height="540"
+            decoding="async"
+            fetchpriority="high"
+            style="aspect-ratio:1280/540;width:100%;height:auto;object-fit:cover">
+        </picture>
+
       </section>
 
       <!-- News / Posts -->
