--- a/index.html
+++ b/index.html
@@ -42,9 +42,16 @@
       title="Chat Fanpage">
       <svg viewBox="0 0 36 36" aria-hidden="true" focusable="false">
         <path
-          d="M18 3C9.716 3 3 9.268 3 17.5c0 4.39 1.994 8.317 5.183 10.943.202.162.327.401.34.659l.07 4.102a.9.9 0 0 0 1.297.79l4.581-2.226a1.05 1.05 0 0 1 .6-.083c.877.128 1.78.195 2.63.195 8.284 0 15-6.268 15-14.5S26.284 3 18 3Zm8.088 10.78-4.957 5.26a1.8 1.8 0 0 1-2.444.175l-2.62-2.094a.9.9 0 0 0-1.13-.014l-5.08 3.91c-.636.49-1.48-.283-1.04-.95l4.957-5.26a1.8 1.8 0 0 1 2.444-.175l2.62 2.094a.9.9 0 0 0 1.13.014l5.08-3.91c.635-.49 1.48.283 1.04.95Z" />
+          d="M18 3C9.716 3 3 9.268 3 17.5c0 4.39 1.994 8.317 5.183 10.943.202.162.327.401.34.659l.07 4.102a.9.9 0 0 0 1.297.79l4.581-2.226a1.05 1.05 0 0 1 .6-.083c.877.128 1.78.195 2.63.195 8.284 0 15-6.268 15-14.5S26.284 3 18 3Zm8.088 10.78-4.957 5.26a1.8 1.8 0 0 1-2.444.175l-2.62-2.094a.9.9 0 0 0-1.13-.014l-5.08 3.91c-.636.49-1.48-.283-1.04-.95l4.957-5.26a1.8 1.8 0 0 1 2.444-.175l2.62 2.094a.9.9 0 0 0 1.13.014l5.08-3.91c.635-.49 1.48.283 1.04.95Z"></path>
       </svg>
     </button>
+
+    <div id="msgrHint" class="ndx-hint" role="status" aria-live="polite"
+      aria-hidden="true">
+      Bạn cần hỗ trợ gì không ạ?
+      <button class="ndx-hint-close" type="button"
+        aria-label="Đóng gợi ý">&times;</button>
+    </div>
 
     <header class="appbar">
       <a class="brand" href="./" aria-label="TDStudio Home">
