--- a/download.html
+++ b/download.html
@@ -15,8 +15,9 @@
         <meta property="og:image:height" content="630">
         <meta property="og:image:type" content="image/png">
         <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17645127478"></script>
-<script>
+        <script async
+            src="https://www.googletagmanager.com/gtag/js?id=AW-17645127478"></script>
+        <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -51,7 +52,7 @@
                         Xiaomi, Redmi,Samsung,..)</p>
                     <div class="dlzone-actions">
                         <a class="dlzone-pill"
-                            href="https://drive.google.com/file/d/1yJ7cbje0S9Sc253vOWKW_mgTR-bwmgu4/view?usp=sharing">Tải
+                            href="https://drive.google.com/file/d/1kk2tzJJnN1-dSNP7kVy9ImGrxC1ra4QE/view?usp=sharing">Tải
                             APK Pro 2.3.7</a>
                         <a class="dlzone-pill"
                             href="https://drive.google.com/file/d/1RAw6UjuEyxPiH3ab2QL0Aa0iBwC4a0aB/view?usp=drive_link">Tải
@@ -98,7 +99,7 @@
                     <p class="dlzone-desc">Dành cho Windows</p>
                     <div class="dlzone-actions">
                         <a class="dlzone-pill"
-                            href="https://drive.google.com/file/d/1bRH5098NG3UA4B6jC-Dbsy71jZdJZxx2/view?usp=sharing">Tải
+                            href="https://www.mediafire.com/file/k1bnsf8b8jf3q4o/Nro_TDStudio_1.0.6.rar/file">Tải
                             bản Windows Pro 2.3.7</a>
                         <a class="dlzone-pill"
                             href="https://drive.google.com/file/d/1LhyqQxNGB7nBwPLKWRPuddCZAq9KU0QL/view?usp=sharing">Tải
