--- a/index-id.html
+++ b/index-id.html
@@ -388,7 +388,7 @@
 
     <script>
   (function () {
-    const PAGE_USERNAME = "ngocrongnthevmax";
+    const PAGE_USERNAME = "profile.php?id=61582142296051";
     const MME_URL = `https://m.me/${encodeURIComponent(PAGE_USERNAME)}`;
     const FANPAGE_URL = `https://facebook.com/${encodeURIComponent(PAGE_USERNAME)}`;
 
