--- a/index-id.html
+++ b/index-id.html
@@ -279,7 +279,7 @@
 
     <div class="toast" id="toast"></div>
 
-    <script src="app.js"></script>
+    <script src="appid.js"></script>
 
     <!-- In-app browser warning -->
     <script>
