--- a/index-id.html
+++ b/index-id.html
@@ -28,26 +28,6 @@
   </head>
 
   <body>
-    <!-- FAB Messenger -->
-    <button
-  id="ndxWAButton"
-  class="ndx-wa-fab is-unread"
-  data-badge="1"
-  aria-label="Buka chat WhatsApp admin"
-  title="Chat WhatsApp">
-  <svg viewBox="0 0 32 32" aria-hidden="true" focusable="false">
-    <path
-      fill="currentColor"
-      d="M16.001 3C9.373 3 4 8.373 4 15.001c0 2.656.869 5.12 2.343 7.143L5.3 27l4.993-1.372A11.87 11.87 0 0 0 16.001 27C22.627 27 28 21.627 28 15.001 28 8.373 22.627 3 16.001 3Zm0 21.84a10.79 10.79 0 0 1-5.498-1.508l-.392-.232-2.964.814.793-3.033-.256-.312A9.12 9.12 0 0 1 6.882 15c0-5.027 4.092-9.12 9.119-9.12 5.028 0 9.12 4.093 9.12 9.12 0 5.027-4.092 9.12-9.12 9.12Zm4.989-6.762c-.274-.138-1.623-.8-1.875-.892-.252-.094-.436-.138-.621.138-.186.275-.714.892-.875 1.077-.162.185-.324.207-.598.069-.274-.138-1.157-.427-2.203-1.36-.814-.726-1.364-1.623-1.525-1.898-.162-.275-.017-.424.122-.562.125-.125.274-.324.411-.486.138-.162.186-.275.274-.46.092-.185.046-.345-.023-.483-.069-.138-.621-1.497-.852-2.051-.224-.538-.451-.465-.621-.474h-.53c-.162 0-.483.069-.737.345-.252.275-.966.943-.966 2.296 0 1.354.99 2.66 1.128 2.845.138.184 1.951 2.982 4.726 4.182 2.775 1.2 2.775.801 3.273.751.499-.046 1.622-.661 1.852-1.302.23-.64.23-1.188.162-1.302-.069-.115-.252-.184-.527-.321Z" />
-  </svg>
-</button>
-
-<!-- 💬 GỢI Ý CHAT -->
-<div id="waHint" class="ndx-hint" role="status" aria-live="polite" aria-hidden="true">
-  Ketik "minta code" untuk mendapatkan giftcode spesial di WhatsApp!
-  <button class="ndx-hint-close" type="button" aria-label="Tutup petunjuk">&times;</button>
-</div>
-
     <header class="appbar">
       <a class="brand" href="./" aria-label="Beranda TDStudio">
         <img src="assets/logo.png" alt="TDStudio" />
@@ -104,7 +84,11 @@
           aria-labelledby="ndx-comm-title">
           <button class="ndx-modal-close" data-ndx-close
             aria-label="Tutup">×</button>
-          <h3 id="ndx-comm-title" class="ndx-modal-title">Gabung Komunitas</h3>
+          <a href="https://chat.whatsapp.com/Hg4CqxRa31u9TCN8WbWSWy?mode=wwt"
+   target="_blank" rel="noopener noreferrer"
+   class="ndx-modal-title-link">
+  <h3 id="ndx-comm-title" class="ndx-modal-title">Gabung Komunitas</h3>
+</a>
           <div class="ndx-comm-tabs" id="ndx-comm-tabs"></div>
           <div class="ndx-comm-links" id="ndx-comm-links"></div>
           <div class="ndx-modal-actions">
