--- a/index-id.html
+++ b/index-id.html
@@ -263,7 +263,7 @@
 
     <div class="toast" id="toast"></div>
 
-    <script src="appid.js"></script>
+    <script src="app.js"></script>
 
     <!-- In-app browser warning -->
     <script>
