--- a/index-id.html
+++ b/index-id.html
@@ -85,9 +85,8 @@
           <button class="ndx-modal-close" data-ndx-close
             aria-label="Tutup">×</button>
           <a href="https://chat.whatsapp.com/Hg4CqxRa31u9TCN8WbWSWy?mode=wwt"
-   target="_blank" rel="noopener noreferrer"
-   class="ndx-modal-title-link">
-  <h3 id="ndx-comm-title" class="ndx-modal-title">Gabung Komunitas</h3>
+   target="_blank" id="ndx-comm-title" rel="noopener noreferrer"
+   class="ndx-modal-title-link"> Gabung Komunitas
 </a>
           <div class="ndx-comm-tabs" id="ndx-comm-tabs"></div>
           <div class="ndx-comm-links" id="ndx-comm-links"></div>
