--- a/index-id.html
+++ b/index-id.html
@@ -77,24 +77,13 @@
         </div>
       </div>
 
-      <div id="ndx-modal-comm" class="ndx-modal" aria-hidden="true"
-        role="dialog" aria-modal="true">
-        <div class="ndx-modal-backdrop" data-ndx-close></div>
-        <div class="ndx-modal-dialog" role="document"
-          aria-labelledby="ndx-comm-title">
-          <button class="ndx-modal-close" data-ndx-close
-            aria-label="Tutup">×</button>
-          <a href="https://chat.whatsapp.com/Hg4CqxRa31u9TCN8WbWSWy?mode=wwt"
-   target="_blank" id="ndx-comm-title" rel="noopener noreferrer"
-   class="ndx-modal-title-link"> Gabung Komunitas
+      <a href="https://chat.whatsapp.com/Hg4CqxRa31u9TCN8WbWSWy?mode=wwt"
+   target="_blank"
+   rel="noopener noreferrer"
+   class="ndx-btn ndx-btn-primary ndx-comm-btn">
+   Gabung Komunitas
 </a>
-          <div class="ndx-comm-tabs" id="ndx-comm-tabs"></div>
-          <div class="ndx-comm-links" id="ndx-comm-links"></div>
-          <div class="ndx-modal-actions">
-            <button class="ndx-btn ndx-btn-ghost" data-ndx-close>Tutup</button>
-          </div>
-        </div>
-      </div>
+
 
       <section class="hero">
         <div class="hero__quick"
