--- a/index-id.html
+++ b/index-id.html
@@ -50,8 +50,14 @@
           <div class="ndx-hero-actions">
             <button id="ndx-btn-register"
               class="ndx-btn ndx-btn-primary">Daftar</button>
-            <button id="ndx-btn-comm" class="ndx-btn ndx-btn-primary">Gabung
-              Komunitas</button>
+            <a href="https://chat.whatsapp.com/Hg4CqxRa31u9TCN8WbWSWy?mode=wwt"
+   target="_blank"
+   rel="noopener noreferrer"
+   class="ndx-btn ndx-btn-primary"
+   id="ndx-btn-comm">
+   Gabung Komunitas
+</a>
+
             <a id="ndx-btn-comm" style="text-decoration: none; font-size: 12px;"
               class="ndx-btn ndx-btn-primary"
               href="download.html">Unduh Game</a>
