--- a/download.html
+++ b/download.html
@@ -52,8 +52,8 @@
                         Xiaomi, Redmi,Samsung,..)</p>
                     <div class="dlzone-actions">
                         <a class="dlzone-pill"
-                            href="https://drive.google.com/file/d/1kk2tzJJnN1-dSNP7kVy9ImGrxC1ra4QE/view?usp=sharing">Tải
-                            APK Pro 2.3.7</a>
+                            href="https://drive.google.com/file/d/1V3AlKVmuGwyC1CRtBVlXZO7Y7tzuuKOl/view?usp=sharing">Tải
+                            APK Pro 1.0.8 (Ngày 27/10/2025)</a>
                         <a class="dlzone-pill"
                             href="https://drive.google.com/file/d/1RAw6UjuEyxPiH3ab2QL0Aa0iBwC4a0aB/view?usp=drive_link">Tải
                             APK Thường 2.3.6</a>
@@ -99,8 +99,8 @@
                     <p class="dlzone-desc">Dành cho Windows</p>
                     <div class="dlzone-actions">
                         <a class="dlzone-pill"
-                            href="https://www.mediafire.com/file/k1bnsf8b8jf3q4o/Nro_TDStudio_1.0.6.rar/file">Tải
-                            bản Windows Pro 2.3.7</a>
+                            href="https://www.mediafire.com/file/3u5gq7kuds7yyul/Nro_TDStudio_1.0.8.rar/file">Tải
+                            bản Windows 1.0.8 (Ngày 27/10/2025)</a>
                         <a class="dlzone-pill"
                             href="https://drive.google.com/file/d/1LhyqQxNGB7nBwPLKWRPuddCZAq9KU0QL/view?usp=sharing">Tải
                             bản Windows Thường 2.3.6</a>
