--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="vi">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="refresh" content="0;url=https://thanhdi.com">
-        <title></title>
-        <script>
-    window.location.replace("https://thanhdi.com" + window.location.pathname + window.location.search + window.location.hash);
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="refresh" content="0;url=https://thanhdi.com">
+  <script>
+    location.replace("https://thanhdi.com" + location.pathname + location.search + location.hash);
   </script>
-        <style>
-    html,body{margin:0;padding:0;background:#000;color:#000;overflow:hidden;}
-  </style>
-    </head>
-    <body></body>
+</head>
+<body></body>
 </html>
